[package]
name = "tincd"
version = "0.1.0"
edition.workspace = true

# Phase 5: tincd daemon. Currently: walking-skeleton + TCP/UDP
# listeners. Boots, opens dummy device, binds TCP+UDP+unix, accepts
# control conns over unix OR TCP, serves REQ_STOP, exits 0.
#
# Proves: tinc-event dispatch enum compiles inside an actual loop body;
# tinc-conf/tinc-device/tinc-event compose; ctl.rs talks to a real
# daemon (tinc_cli.rs's fake_daemon_setup is the inverse of this);
# socket2 wraps the C's four-step socket→setsockopt→bind→listen.

[lints]
workspace = true

[[bin]]
name = "tincd"
path = "src/main.rs"

# Standalone DHT seed for sealed-network tests. Own bin (not a tincd flag)
# because it's a different process shape: server-mode mainline node, no
# config, no TUN, parks forever. The NixOS DHT test runs ten of these
# on the relay to make a swarm large enough for K-closest convergence.
[[bin]]
name = "tinc-dht-seed"
path = "src/bin/tinc-dht-seed.rs"

[dependencies]
tinc-conf = { path = "../tinc-conf" }
tinc-crypto = { path = "../tinc-crypto" }
tinc-device = { path = "../tinc-device" }
tinc-proto = { path = "../tinc-proto" }
tinc-sptps = { path = "../tinc-sptps" }

# slotmap for ConnId. Generational keys: a stale ConnId can't dangle
# into a slot reused by a different connection. The C uses raw
# connection_t* and the io_tree.generation guard; we use opaque keys.
slotmap = "1"

# C `randomize` → OsRng. control.c:149 fills 32 bytes for the cookie.
# rand_core 0.6 (NOT 0.9) — same as tinc-tools, keeps lock unified.
rand_core = { version = "0.6", features = ["getrandom"] }

# sha2 for NodeId6 (node.c:126-128: sha512(name, strlen, buf), keep
# first 6). Already in the lockfile via tinc-crypto / ed25519-dalek.
sha2.workspace = true
subtle.workspace = true

thiserror.workspace = true

log = "0.4"
# Minimal env_logger: no anstream/anstyle/jiff/regex. RUST_LOG=tincd
# substring filtering works without regex; that's enough.
env_logger = { version = "0.11", default-features = false }

libc = "0.2"

# Safe wrappers for read/send/fcntl/umask/socketpair. Same dep as
# tinc-device. fs: umask + fcntl OFlag/FdFlag. socket: send/socketpair.
# Drops 9 #[allow(unsafe_code)] sites — the unsafe was just ceremony
# around the libc call boundary.
# user: drop_privs (-U), main.rs needs User::from_name + setuid/setgid/initgroups.
# process: daemon() for detach, fexecve cousins (unused but feature-coupled).
# mman: mlockall (-L).
nix = { version = "0.31", default-features = false, features = ["fs", "socket", "net", "uio", "user", "process", "mman", "signal", "hostname", "event"] }

# Landlock path allowlist for Sandbox=normal|high (sandbox.rs).
# Linux only: the target.cfg means non-Linux builds don't even try
# to compile the crate. sandbox.rs cfg-gates enter_impl on the same
# predicate. Kernel ≥5.13; older kernels get RulesetStatus::
# NotEnforced at runtime (warn at normal, hard-fail at high).
# discovery/blind.rs: ed25519 key blinding (Tor v3 KEYBLIND) needs the
# raw scalar+point arithmetic. dalek `hazmat` is already on (workspace);
# curve25519-dalek is made direct so its EdwardsPoint/Scalar are nameable
# here without relying on transitivity. Same version as the workspace pin.
curve25519-dalek.workspace = true
ed25519-dalek.workspace = true
# discovery/blind.rs is SHA-3-only (SHA3-256 for the blinding param,
# SHAKE256 for salt+AEAD-key derive) so a future SPTPS-KDF migration to
# SHAKE can drop `hkdf`/`sha2` entirely from tincd. digest 0.11 cohort.
sha3 = { version = "0.11", default-features = false }
# discovery.rs envelope: XChaCha20-Poly1305 over the BEP 44 value.
# 0.10 (NOT 0.11-rc): pulls chacha20 0.9 + poly1305 0.8 — the exact
# versions tinc-crypto already uses, so no second cipher build.
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
# DhtSecret (inline + file) is standard b64 (NOT tinc's bit-reversed
# variant — this is operator-facing, copy-pasteable). Already in lock
# via mainline.
base64 = "0.22"
# discovery.rs: BitTorrent Mainline DHT for BEP 42 reflexive address voting
# ("what's my public IP") + BEP 44 publish ("where am I", keyed by Ed25519
# pubkey). Runs on its own std::thread; polled from on_periodic_tick. The
# in-band reflexive path (ADD_EDGE/ANS_KEY append) needs a relay with a
# static Address=; this gives an estimate *before* first contact.
mainline.workspace = true

# socket2 for the four-step socket→setsockopt→bind→listen sequence.
# std's TcpListener::bind is atomic, no seam for IPV6_V6ONLY. socket2
# is std-with-seams; only dep is libc (already linked). NOT a new shim-
# matrix row — same quadrant as slotmap-instead-of-hand-rolling-a-slab.
# No 'all' feature: V6ONLY/REUSEADDR/NODELAY/BROADCAST are all ungated.
socket2 = { version = "0.6", features = ["all"] }

# packet.rs: derive FromBytes/IntoBytes on the #[repr(C, packed)]
# wire structs instead of hand-writing field-by-field codecs. The
# structs already store network-order bytes; serialization is a
# transmute. Already in lockfile via dependencies.
zerocopy = { version = "0.8", features = ["derive"] }

# ConnOptions bitfield (dispatch.rs). Already in lockfile via deps.
bitflags = "2"

# zlib levels 1-9. miniz backend (no C dep). The C tinc uses real
# zlib; output bytes differ but cross-decompress fine (deflate is a
# SPEC, both implement it). KAT in compress.rs proves cross-decode.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

# LZ4 level 12. Block format (no frame, no length prefix), matches
# the C's LZ4_compress_fast_extState wire output. KAT proves it.
lz4_flex = "0.13"

# portmap: PCP (hand-rolled, RFC 6887) + UPnP-IGD fallback (hand-
# rolled in src/portmap/igd.rs, std-only). n0's `portmapper` was
# evaluated and rejected (drags +190 transitive crates: full tokio/
# hyper/netwatch); igd-next was tried and dropped (~50 deps via
# attohttpc → url → idna → ICU). netdev provides cross-platform
# default-gateway lookup (v4 *and* v6 — 0.42 fixed the Linux v6
# parser); PCP needs the gateway addr to send to. Feature-gated,
# default-ON to mirror C tinc's --enable-miniupnpc autoconf default.
netdev = { version = "0.42", optional = true }

# LZO levels 10–11: vendored minilzo.c (GPL-2.0+, same as tinc) via
# cc crate. lzo-sys is bindings-only (still needs system liblzo2);
# rust-lzo/lzo1x are pure-rust ports of unknown quality. LZO is the
# tinc 1.0 DEFAULT — wire-compat is non-negotiable, so we call THE
# SAME C code C tinc calls. minilzo lacks lzo1x_999_compress (level
# 11 compress); see minilzo/README.

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
[build-dependencies]
cc = "1.0"

[dev-dependencies]
# Integration tests: tempdir for confbase, no other deps.
# Hand-rolled TmpGuard (per the standing rule: NamedTempFile not used).
# tinc-conf/-crypto/-sptps for test helpers (write_pem, SigningKey,
# Sptps::start — the integration test IS the SPTPS initiator side).
# These are also in [dependencies] but listing here documents the
# test-side usage (write keys, drive SPTPS).
tinc-conf = { path = "../tinc-conf" }
tinc-crypto = { path = "../tinc-crypto" }
tinc-sptps = { path = "../tinc-sptps" }
# tinc-tools for the `tinc_join_against_real_daemon` integration test:
# the REAL `cmd::join::join()` runs in-process against the spawned
# daemon. Stronger than the in-process pump test in join.rs (real
# TCP, real epoll, real daemon's `?` branch).
tinc-tools = { path = "../tinc-tools" }
# graph_kat.rs differential test (parses tests/graph_kat/graph.json)
# + benches/throughput.rs iperf3 --json on Linux.
serde = { workspace = true }
serde_json = { workspace = true }
# autoconnect.rs tests: deterministic RNG. rand_chacha is already in the
# lockfile (transitively via rand 0.8). rand_core 0.6 trait compat.
rand_chacha = "0.3"


[features]
default = ["upnp"]
upnp = ["dep:netdev"]

[[bench]]
name = "throughput"
harness = false
